<resources>
    <string name="app_name">Habit³</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_settings">Settings</string>
    <string name="overview_month">Month</string>
    <string name="overview_week_preview_names">mo tu we th fr sa su</string>
    <string name="overview_week_preview_numbers">08 09 10 11 12 13 14</string>
    <string name="overview_add">add habit</string>
    <string name="overview_add_description">add habit placeholder</string>
    <string name="item_habit_day">day</string>
    <string name="item_habit_days">days</string>
    <string name="item_habit_week">week</string>
    <string name="item_habit_weeks">weeks</string>
    <string name="edit_section_push_notification">Push Notification</string>
    <string name="edit_section_morning">MORNING</string>
    <string name="edit_section_noon">NOON</string>
    <string name="edit_section_evening">EVENING</string>
    <string name="edit_section_custom">CUSTOM</string>
    <string name="edit_tvState_create">Create</string>
    <string name="edit_tvState_edit">Edit</string>
    <string name="edit_btn_save">SAVE</string>
    <string name="edit_btn_create">CREATE</string>
    <string name="edit_btn_cancel">CANCEL</string>
    <string name="edit_habit_name">Habit Name</string>
    <string name="edit_et_habit_name_hint">name</string>
    <string name="edit_et_habit_message_hint">motivational message</string>
    <string name="edit_section_habit_type_build">BUILD</string>
    <string name="edit_section_habit_type_break">BREAK</string>
    <string name="edit_section_habit_type_target">n</string>
    <string name="edit_section_habit_type_unit">unit</string>
    <string name="edit_habit_type">Habit Type</string>
    <string name="edit_section_repeat">Repeat</string>
    <string name="edit_section_target">Target</string>
    <string name="edit_section_habit_type_day">/day</string>
    <string name="dialog_cancel_title">Discard Changes?</string>
    <string name="dialog_cancel_message">Are you sure you want to discard your changes?</string>
    <string name="dialog_cancel_stay">Stay</string>
    <string name="dialog_cancel_leave">Leave</string>
    <string name="detail_title_habit">Habit:</string>
    <string name="detail_goal">Goal</string>
    <string name="detail_button_edit">Edit your habit</string>
    <string name="statistics_title">Statistics</string>
    <string name="credits_underlined"><u>Credits</u></string>
    <string name="inspiration_underlined"><u>Inspiration</u></string>
    <string name="settings_inspiration">Inspiration</string>
    <string name="settings_credtis">Credits</string>
    <string name="credits_developed_by">Developed by…</string>
    <string name="credits_georgi">\@Georgi Gerov, 20122, j0-ji</string>
    <string name="credits_malte">\@Malte Möhring, 19035, Sloth404</string>
    <string name="settings_title">Settings</string>
    <string name="settings_push">Push-Notification</string>
    <string name="settings_morning">Morning</string>
    <string name="settings_custom_time">00:00</string>
    <string name="settings_noon">Noon</string>
    <string name="settings_morning_time">09:00</string>
    <string name="settings_evening">Evening</string>
    <string name="settings_noon_time">13:00</string>
    <string name="settings_custom">Custom</string>
    <string name="settings_evening_time">17:00</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_app">App</string>
    <string name="settings_light">Light</string>
    <string name="settings_dark">Dark</string>
    <string name="settings_icon">Icon</string>
    <string name="motification_text">You\'re doing great!</string>
    <string name="motivation_text">You\'re doing great! Don\'t forget your habit </string>
    <string name="reminder_text">Don\'t forget to log your habit!</string>
    <string name="did_it">Did do it</string>
    <string name="didnt_do_it">Didn\'t do it</string>
</resources>