<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_habit_item">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/jetbrains_mono"
        android:text="@string/settings_credtis"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jetbrains_mono"
        android:text="@string/credits_developed_by"
        android:textColor="@color/dark_grey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/jetbrains_mono"
        android:text="@string/credits_georgi"
        android:textColor="@color/dark_grey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jetbrains_mono"
        android:text="@string/credits_malte"
        android:textColor="@color/dark_grey"
        android:textSize="16sp" />
</LinearLayout>