<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_habit_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jetbrains_mono"
        android:text="@string/dialog_cancel_title"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/jetbrains_mono"
        android:text="@string/dialog_cancel_message" />

    <LinearLayout
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnStay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_save_light"
            android:fontFamily="@font/jetbrains_mono"
            android:text="@string/dialog_cancel_stay"
            android:textColor="@color/black"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/button_cancel_light"
            android:fontFamily="@font/jetbrains_mono"
            android:text="@string/dialog_cancel_leave"
            android:textColor="@color/black"
            app:cornerRadius="8dp" />
    </LinearLayout>
</LinearLayout>
